add option to exclude sample registration downloading
